--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
 			<artifactId>gson</artifactId>
 			<version>2.6.1</version>
 		</dependency>
-
+<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
